--- a/provision/ansible/playbooks/tasks/source.yml
+++ b/provision/ansible/playbooks/tasks/source.yml
@@ -53,3 +53,7 @@
   sudo: true
   command: "make install chdir=/tmp/otp_src_{{erlang_version}}"
   when: erlang_downloaded.changed
+
+- name: Ruby | Install erlnixify gem
+  sudo: yes
+  command: bash -lc "gem install erlnixify"
