--- a/provision/ansible/playbooks/tasks/source.yml
+++ b/provision/ansible/playbooks/tasks/source.yml
@@ -56,14 +56,14 @@
 - name: Latest version of Ruby is installed
   apt: pkg={{ item }} state=latest
   with_items:
-    - ruby2.0
-    - ruby2.0-dev
+    - ruby1.9.3
+    # - ruby-1.9.3-dev
 
-- name: Symlink exists for Ruby 2.0
-  file: src=/usr/bin/ruby2.0 dest=/usr/local/bin/ruby state=link
+- name: Symlink exists for Ruby 1.9.3
+  file: src=/usr/bin/ruby1.9.3 dest=/usr/local/bin/ruby state=link
 
-- name: Symlink exists for Ruby Gems 2.0
-  file: src=/usr/bin/gem2.0 dest=/usr/local/bin/gem state=link
+# - name: Symlink exists for Ruby Gems 2.0
+#   file: src=/usr/bin/gem1.9.3 dest=/usr/local/bin/gem state=link
 
 - name: Ruby | Install erlnixify gem
   sudo: yes
