--- a/provision/ansible/playbooks/defaults/main.yml
+++ b/provision/ansible/playbooks/defaults/main.yml
@@ -1,3 +1,5 @@
 erlang_version: "17.3"
 erlang_build_flags: ""
 erld_repo_url: "https://github.com/ShoreTel-Inc/erld.git"
+emacs_repo_url: "https://github.com/emacs-mirror/emacs.git"
+emacs_version: "emacs-24.4"
