break up into small modules

--- a/provision/ansible/playbooks/defaults/main.yml
+++ b/provision/ansible/playbooks/defaults/main.yml
@@ -3,3 +3,5 @@ erlang_build_flags: ""
 erld_repo_url: "https://github.com/ShoreTel-Inc/erld.git"
 emacs_repo_url: "https://github.com/emacs-mirror/emacs.git"
 emacs_version: "emacs-24.4"
+dotfiles_repo_url: "https://github.com/RomanShestakov/dotfiles.git"
+dot_emacs_repo_url: "https://github.com/RomanShestakov/.emacs.git"
