--- a/provision/ansible/playbooks/tasks/bash.yml
+++ b/provision/ansible/playbooks/tasks/bash.yml
@@ -2,20 +2,8 @@
 
 - name: BASH | get dotfiles from git repository
   git: repo={{ dotfiles_repo_url }} dest="/tmp/dotfiles" accept_hostkey=yes
-  # sudo: true
   register: dotfiles_downloaded
 
 - name: BASH | install dotfiles
   command: ./bootstrap.sh -f chdir="/tmp/dotfiles"
-#  when: dotfiles_downloaded.changed
-
-- name: install virtualenv
-  sudo: true
-  apt: name=python-virtualenv state=present
-
-# - name: PIP | install flake8
-#   pip: name=flake8
-
-- name: PIP | install pylint
-  sudo: true
-  pip: name=pylint
+  when: dotfiles_downloaded.changed
