--- a/provision/ansible/playbooks/tasks/main.yml
+++ b/provision/ansible/playbooks/tasks/main.yml
@@ -1,17 +1,5 @@
-# - name: Erlang | Check if the Erlang version is already installed
-#   command: cat /var/cache/anxs-erlang-version
-#   register: current_erlang_version
-#   ignore_errors: yes
-#   changed_when: current_erlang_version.rc != 0 or current_erlang_version.stdout != "{{erlang_version}}"
 - include: source.yml
-#  when: current_erlang_version.changed
-# - name: Erlang | Persist current version
-#   copy: dest=/var/cache/anxs-erlang-version content="{{erlang_version}}"
-
 - include: bash.yml
-
-#  when: current_erlang_version.changed
-
+- include: python.yml
 - include: emacs.yml
-
 - include: erlang.yml
