move dotfiles install at the end

--- a/provision/ansible/playbooks/tasks/main.yml
+++ b/provision/ansible/playbooks/tasks/main.yml
@@ -1,5 +1,6 @@
 - include: source.yml
-- include: bash.yml
 - include: python.yml
 - include: emacs.yml
 - include: erlang.yml
+# apply bash last to correctly set PATHs, etc to apps which we installed before
+- include: bash.yml
