--- a/provision/ansible/playbooks/vm.yml
+++ b/provision/ansible/playbooks/vm.yml
@@ -1,5 +1,15 @@
-- hosts: all
-  vars_files:
-    - 'defaults/main.yml'
-  tasks:
-    - include: 'tasks/main.yml'
+# - hosts: all
+#   vars_files:
+#     - 'defaults/main.yml'
+#   tasks:
+#     - include: 'tasks/main.yml'
+
+- name: vm.yml
+  hosts: all
+
+  roles:
+    - { role: common, tags: ["common"] }
+    - { role: python, tags: ["python"] }
+    - { role: erlang, tags: ["erlang"] }
+    - { role: emacs, tags: ["emacs"] }
+    - { role: bash, tags: ["bash"] }
