--- a/provision/ansible/playbooks/vm.yml
+++ b/provision/ansible/playbooks/vm.yml
@@ -4,7 +4,7 @@
   roles:
     - { role: common, tags: ["common"] }
     - { role: python, tags: ["python"] }
-    - { role: erlang, tags: ["erlang"] }
+    - { role: ANXS.erlang, sudo: yes, tags: ["erlang"] }
     - { role: emacs, tags: ["emacs"] }
     - { role: bash, tags: ["bash"] }
     - { role: ANXS.postgresql, sudo: yes, tags: ["postgresql"] }
