--- a/provision/ansible/playbooks/roles/roles_requirements.yml
+++ b/provision/ansible/playbooks/roles/roles_requirements.yml
@@ -3,6 +3,10 @@
 # from galaxy
 # - src: yatesr.timezone
 
+- src: git+https://github.com/ANXS/git.git
+  version: "v1.0.1"
+  name: ANXS.git
+
 - src: git+https://github.com/ANXS/build-essential.git
   version: "v1.0.1"
   name: ANXS.build-essential
@@ -14,3 +18,7 @@
 - src: git+https://github.com/ANXS/postgresql.git
   version: "v1.1.1"
   name: ANXS.postgresql
+
+- src: git+https://github.com/ANXS/python.git
+  version: "v1.0.1"
+  name: ANXS.python
