--- a/provision/ansible/playbooks/vm.yml
+++ b/provision/ansible/playbooks/vm.yml
@@ -3,13 +3,18 @@
 - name: vm.yml
   hosts: all
   roles:
-    - { role: common, tags: ["common"] }
     - { role: ANXS.git, sudo: yes, tags: ["git"] }
     - { role: ANXS.erlang, sudo: yes, tags: ["erlang"] }
     - { role: ANXS.python, sudo: yes, tags: ["python"] }
     - { role: RomanShestakov.ansible-role-emacs, sudo: yes, tags: ["emacs"] }
-    - { role: bash, tags: ["bash"] }
     - { role: ANXS.postgresql, sudo: yes, tags: ["postgresql"] }
+    - { role: trinitronx.ansible-role-tmux, sudo: yes, tags: ["tmux"] }
   tasks:
   - name: .EMACS | get .emacs git repository
     git: repo={{ dot_emacs_repo_url }} dest="/home/vagrant/.emacs.d" accept_hostkey=yes
+  - name: DOTFILES | get dotfiles from git repository
+    git: repo={{ dotfiles_repo_url }} dest="/tmp/dotfiles" accept_hostkey=yes
+    register: dotfiles_downloaded
+  - name: DOTFILES | install dotfiles
+    command: ./bootstrap.sh -f chdir="/tmp/dotfiles"
+    when: dotfiles_downloaded.changed
