--- a/provision/ansible/playbooks/vm.yml
+++ b/provision/ansible/playbooks/vm.yml
@@ -4,7 +4,7 @@
   hosts: all
   roles:
     - { role: ANXS.git, sudo: yes, tags: ["git"] }
-    - { role: ANXS.erlang, sudo: yes, tags: ["erlang"] }
+    - { role: RomanShestakov.erlang, sudo: yes, tags: ["erlang"] }
     - { role: ANXS.python, sudo: yes, tags: ["python"] }
     - { role: RomanShestakov.ansible-role-emacs, sudo: yes, tags: ["emacs"] }
     - { role: ANXS.postgresql, sudo: yes, tags: ["postgresql"] }
