--- a/provision/ansible/playbooks/vm.yml
+++ b/provision/ansible/playbooks/vm.yml
@@ -7,6 +7,15 @@
     # - name: upgrade packages
     #   apt: upgrade=yes update_cache=yes cache_valid_time=300
     #   sudo: yes
+    # - name: Installs git
+    #   sudo: yes
+    #   apt: pkg=git state=installed
+    - name: install some packages
+      sudo: true
+      apt: pkg={{ item }} update_cache=yes cache_valid_time=3600 state=present
+      with_items:
+      - git
+      - tmux
     - name: DOTFILES | get dotfiles from git repository
       git: repo={{ dotfiles_repo_url }} dest="/tmp/dotfiles" accept_hostkey=yes
       register: dotfiles_downloaded
@@ -15,13 +24,13 @@
       when: dotfiles_downloaded.changed
 
   roles:
-    - { role: ANXS.git, sudo: yes, tags: ["git"] }
+    #- { role: ANXS.git, sudo: yes, tags: ["git"] }
     - { role: RomanShestakov.erlang, sudo: yes, tags: ["erlang"] }
     - { role: ANXS.python, sudo: yes, tags: ["python"] }
     - { role: RomanShestakov.ansible-role-emacs, sudo: yes, tags: ["emacs"] }
     - { role: ANXS.postgresql, sudo: yes, tags: ["postgresql"] }
-    - { role: trinitronx.ansible-role-tmux, sudo: yes, tags: ["tmux"] }
-    - { role: nicholsn.miniconda, sudo: yes, tags: ["miniconda"] }
+    # - { role: trinitronx.ansible-role-tmux, sudo: yes, tags: ["tmux"] }
+    - { role: nicholsn.miniconda, sudo: yes, tags: ["miniconda"], miniconda_home: ~/miniconda }
 
   post_tasks:
     - name: .EMACS | get .emacs git repository
