--- a/provision/ansible/playbooks/vm.yml
+++ b/provision/ansible/playbooks/vm.yml
@@ -9,7 +9,7 @@
     - { role: RomanShestakov.ansible-role-dotfiles, tags: ["dotfiles"] }
     - { role: RomanShestakov.erlang, sudo: yes, tags: ["erlang"] }
     - { role: ANXS.python, sudo: yes, tags: ["python"] }
-    - { role: RomanShestakov.ansible-role-emacs, tags: ["emacs"] }
+    - { role: RomanShestakov.ansible-role-emacs, sudo: yes, tags: ["emacs"] }
     - { role: ANXS.postgresql, sudo: yes, tags: ["postgresql"] }
     - { role: nicholsn.miniconda, sudo: yes, tags: ["miniconda"], miniconda_home: ~/miniconda }
 
