--- a/provision/ansible/playbooks/vm.yml
+++ b/provision/ansible/playbooks/vm.yml
@@ -4,14 +4,15 @@
   hosts: all
 
   roles:
-    - { role: ANXS.git, sudo: yes, tags: ["git"] }
-    - { role: RomanShestakov.ansible-role-tmux, sudo: yes, tags: ["tmux"] }
+    # - { role: ANXS.build-essential, sudo: yes, tags: ["build-essensial"] }
+    # - { role: ANXS.git, sudo: yes, tags: ["git"] }
+    # - { role: RomanShestakov.ansible-role-tmux, tags: ["tmux"] }
     - { role: RomanShestakov.ansible-role-dotfiles, tags: ["dotfiles"] }
-    - { role: RomanShestakov.erlang, sudo: yes, tags: ["erlang"] }
-    - { role: RomanShestakov.ansible-role-emacs, sudo: yes, tags: ["emacs"] }
-    - { role: ANXS.postgresql, sudo: yes, tags: ["postgresql"] }
-    - { role: nicholsn.miniconda, sudo: yes, tags: ["miniconda"], miniconda_home: ~/miniconda }
-    - { role: RomanShestakov.ansible-role-conda-packages, sudo: yes, tags: ["conda"] }
+    # - { role: RomanShestakov.erlang, sudo: yes, tags: ["erlang"] }
+    # - { role: RomanShestakov.ansible-role-emacs, tags: ["emacs"] }
+    # - { role: ANXS.postgresql, sudo: yes, tags: ["postgresql"] }
+    - { role: nicholsn.miniconda, tags: ["miniconda"], miniconda_home: ~/miniconda }
+    - { role: RomanShestakov.ansible-role-conda-packages, tags: ["conda"] }
 
   post_tasks:
     - name: .EMACS | get .emacs git repository
