--- a/provision/ansible/playbooks/vm.yml
+++ b/provision/ansible/playbooks/vm.yml
@@ -7,7 +7,7 @@
     # - { role: ANXS.build-essential, sudo: yes, tags: ["build-essensial"] }
     # - { role: ANXS.git, sudo: yes, tags: ["git"] }
     # - { role: RomanShestakov.ansible-role-tmux, tags: ["tmux"] }
-    - { role: RomanShestakov.ansible-role-dotfiles, tags: ["dotfiles"] }
+    - { role: RomanShestakov.ansible-role-dotfiles, become: yes, tags: ["dotfiles"] }
     # - { role: RomanShestakov.erlang, sudo: yes, tags: ["erlang"] }
     # - { role: RomanShestakov.ansible-role-emacs, tags: ["emacs"] }
     # - { role: ANXS.postgresql, sudo: yes, tags: ["postgresql"] }
