--- a/provision/ansible/playbooks/roles/roles_requirements.yml
+++ b/provision/ansible/playbooks/roles/roles_requirements.yml
@@ -3,12 +3,16 @@
 # from galaxy
 # - src: yatesr.timezone
 
-- src: git+https://github.com/ANXS/git.git
-  version: "v1.0.1"
-  name: ANXS.git
+# - src: git+https://github.com/ANXS/git.git
+#   version: "v1.0.1"
+#   name: ANXS.git
 
-- src: git+https://github.com/ANXS/build-essential.git
-  version: "v1.0.1"
+- src: git+https://github.com/geerlingguy/ansible-role-git.git
+  version: "1.1.1"
+  name: geerlingguy.git
+
+- src: git+https://github.com/RomanShestakov/build-essential.git
+  #version: "v1.0.1"
   name: ANXS.build-essential
 
 - src: git+https://github.com/RomanShestakov/erlang.git
@@ -30,8 +34,8 @@
   version: "v1.0.1"
   name: ANXS.python
 
-- src: git+https://github.com/trinitronx/ansible-role-tmux.git
-  name: trinitronx.ansible-role-tmux
+# - src: git+https://github.com/trinitronx/ansible-role-tmux.git
+#   name: trinitronx.ansible-role-tmux
 
 - src: git+https://github.com/RomanShestakov/ansible-role-emacs.git
   name: RomanShestakov.ansible-role-emacs
